Adding html UI for the extension

--- a/leetcodeTimer.html
+++ b/leetcodeTimer.html
@@ -1,9 +1,22 @@
 <html>
 
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
 <body>
-    <h1>
-        Leetcode extension
-    </h1>
+    <div class="canvas">
+        <div class="title">
+            Leetcode Timer
+        </div>
+        <div class="operations">
+            Operations
+        </div>
+        <div class="operation-buttons">
+            <button class="reset-button">Reset Data</button>
+            <button class="download-button">Download CSV</button>
+        </div>
+    </div>
     <script src="leetcode_script.js"></script>
 </body>
 
